Updated with a few of my favs

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,20 +1,18 @@
+# This is Git's per-user configuration file.
+# 23 June 2016
+#############################################
 # core {{{
 [core]
-    editor = /usr/bin/vim
-    excludesfile = /Users/np/.gitignore_global
+    editor = /usr/bin/emacs
+    excludesfile = ~/.gitignore_global
     pager=less -x4
 
 #}}}
-# user {{{
-[user]
-    email = npaolucci@atlassian.com
-    name = Nicola Paolucci
 
-#}}}
-# include sendemail config {{{
-[include]
-    path = ~/.git-sendemail
-# }}}
+[user]
+    name = Chris Ciotti
+    email = chris.ciotti@gmail.com
+
 # color {{{
 [color]
     branch = auto
@@ -52,10 +50,15 @@
     whitespace = nowarn
 
 #}}}
+
 # alias {{{
 [alias]
     # basic {{{
-    st = status -s
+    s = status
+    a = add
+    pl = pull --rebase
+    rlog = log --graph --oneline --decorate --all
+    st = status -s    
     cl = clone
     ci = commit
     co = checkout
@@ -64,15 +67,18 @@
     cp = cherry-pick
     gr = grep -Ii
     # }}}
+    
     # tweak defaults {{{
     diff = diff --word-diff
     branch = branch -ra
     grep = grep -Ii
     bra = branch -ra
     ai = add --interactive
+    
     # grep on filename
     f = "!git ls-files | grep -i"
     # }}}
+    
     # commit {{{
     cm = commit -m
     cma = commit -a -m
@@ -80,6 +86,7 @@
     amend = commit --amend
     caa = commit -a --amend -C HEAD
     # }}}
+    
     # log commands {{{
     ls = log --pretty=format:"%C(green)%h\\ %C(yellow)[%ad]%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=relative
     ll = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --numstat
@@ -88,6 +95,7 @@
     fl = log -u
     filelog = log -u
     # }}}
+    
     # diff {{{
     d = diff --word-diff
     dc = diff --cached
@@ -96,6 +104,7 @@
     dr  = "!f() { git diff -w "$1"^.."$1"; }; f"
     diffr  = "!f() { git diff "$1"^.."$1"; }; f"
     # }}}
+    
     # reset commands {{{
     r1 = reset HEAD^
     r2 = reset HEAD^^
@@ -103,31 +112,39 @@
     rh1 = reset HEAD^ --hard
     rh2 = reset HEAD^^ --hard
     # }}}
+    
     # git svn {{{
     svnr = svn rebase
     svnd = svn dcommit
     svnl = svn log --oneline --show-commit
     # }}}
+    
     # stash {{{
     sl = stash list
     sa = stash apply
     ss = stash save
     # }}}
+    
     # assume aliases {{{
     assume = update-index --assume-unchanged
     unassume = update-index --no-assume-unchanged
+    
     # show assumed files
     assumed = "!git ls-files -v | grep ^h | cut -c 3-"
+    
     # unassume all the assumed files
     unassumeall = "!git assumed | xargs git update-index --no-assume-unchanged"
     assumeall = "!git status -s | awk {'print $2'} | xargs git assume"
     # }}}
+    
     # subtree {{{
     #   add
     sba = "!f() { git subtree add --prefix $2 $1 master --squash; }; f"
+    
     #   update/pull
     sbu = "!f() { git subtree pull --prefix $2 $1 master --squash; }; f"
     # }}}
+    
     # various useful {{{
     # last tag created
     lasttag = describe --tags --abbrev=0
@@ -145,6 +162,7 @@
 
     #open markdown files edited in last commit
     last = "!gvim $(git show HEAD --format="" --name-only | grep -e .*md$ | xargs)"
+    
     #open just created markdown in working directory
     newmd = "!gvim $(git status -s | awk {'print $2'})"
 
@@ -154,6 +172,7 @@
     # list all aliases
     la = "!git config -l | grep alias | cut -c 7-"
     # }}}
+    
     # convoluted aliases {{{
     # grep from root folder
     gra = "!f() { A=$(pwd) && TOPLEVEL=$(git rev-parse --show-toplevel) && cd $TOPLEVEL && git grep --full-name -In $1 | xargs -I{} echo $TOPLEVEL/{} && cd $A; }; f"
@@ -162,14 +181,18 @@
     #add bitbucket remote
     ra = "!f() { git remote add $1 https://bitbucket.org/$2.git; }; f"
     # }}}
+    
     # worktree list {{{
     wl = worktree list
     # }}}
 # }}}
+
 [rerere]
   enabled = false
+
 [rebase]
   autosquash = true
+
 [filter "lfs"]
 	clean = git-lfs clean %f
 	smudge = git-lfs smudge %f
